Update Primi Passi

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -61,11 +61,11 @@
 }
 
 .about .about-code h2 {
-  color: hsl(330, 65%, 55%);
+  color: #e52822;
 }
 
 .about .play-along h2 {
-  color: hsl(222, 53%, 50%);
+  color: #e52822;
 }
 
 .about-button {
