--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -8,7 +8,7 @@
   bottom: 0;
   overflow-x: hidden;
   overflow-y: auto;
-  color: var(--color-accent);
+  color: #e52822;
 
   /* Hide */
   pointer-events: none;
